	  STM32L-Discovery's segment LCD (2013-5-22).
	* fs/fs_poll.c:  Poll setup/teardown logic should ignore invalid (i.e.,
	  negative) file descriptors.  Max Holtzberg (2013-5-23).
	* net/net_poll.c: When readahead data is availalbe, the network poll
	  logic should set POLLIN (or POLLRDNORM), not POLLOUT.  Max Holtzberg
	  (2013-5-23)
	* fs/fs_poll.c:  Actually, it should also set revents == 0. (2013-5-23).
	* libc/misc/lib_slcdencode.c and lib_slcddecode.c:  Add logic to marshal
	  and serialized special SLCD intermixed with normal ASCII data (2013-5-23)
	* configs/stm32ldiscovery/src/stm32_lcd.c:  STM32L-Discovery's segment LCD
	  is code complete but completely untested (2013-5-23).
	* include/nuttx/fs/ioctl.h, include/nuttx/lcd/slcd_codec.h, and
	  configs/stm32ldiscovery/src/stm32_lcd.c:  Add SLCD ioctl commands to get
	  SLCD geometry, set bars, and manage contrast (2013-5-23).
	* configs/stm32ldiscovery/src/stm32_usb.c:  This file and all references
	  to USB removed for the STM32L-Discovery.  While the chip supports a
	  USB device, the board does not (2013-5-24).
	* arch/arm/src/stm32/stm32_lse.c:  Add support for the STM32L CSR register
	  and for the LSE LCD clock source (2013-5-24).
	* The STM32L-Discovery segment LCD is now functional and the README file
	  includes instructions for adding the apps/examples/slcd segment LCD
	  test as an NSH "built-in" command (2013-5-24).
	* configs/pcblogic-pic32mx:  Converted all configurations to use the
	  kconfig-frontends tool (2013-5-25).
	* configs/pcblogic-pic32mx/src:  Renamed files using pic32mx_ vs up_
	  prefix.  Enable building of LCD1602 LCD (2013-5-25).
	* configs/pcblogic-pic32mx/src/pic32mx_lcd1602.c: Now uses SLCD CODEC
	  (2013-5-25)
	* configs/stm32ldiscovery/src/stm32_lcd.c: Now supports ioctl to get
	  cursor position (2013-5-25).
	* include/nuttx/lcd/slcd_ioctl.h:  Moved ioctls commands and structures
	  from slcd_codec.h (2013-5-25)