@@ -665,15 +665,12 @@ Configuration sub-directories
 
        To enable LCD debug output:
 
-       Device Drivers:
-         CONFIG_LCD=y                            : (Needed to enable LCD debug)
-
        Build Setup:
          CONFIG_DEBUG=y                          : Enable debug features
          CONFIG_DEBUG_VERBOSE=y                  : Enable LCD debug
 
        NOTE:  At this point in time, testing of the SLCD is very limited because
        there is not much in apps/examples/slcd.  Certainly there are more bugs
-       to be found.  There are also many segment-encoded glyphs in stm32_lcd.c
-       But there is a basically functional driver with a working test setup
-       that can be extended if you want a fully functional SLCD driver.
+       to be found.  But there is a basically functional driver with a working
+       test setup that can be extended if you want a fully functional LCD1602
+       driver.
